# genie-world

./: .gitignore  README.md  genie_tracing_demo.py  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/superpowers/plans/: 2026-03-14-genie-world-core-profiler.md  2026-03-15-builder-implementation.md  2026-03-18-benchmarks-implementation.md
docs/superpowers/specs/: 2026-03-14-genie-world-design.md  2026-03-15-builder-design.md  2026-03-18-benchmarks-design.md  2026-03-26-docs-ui-design.md
genie_world/: __init__.py
genie_world/benchmarks/: __init__.py  diagnoser.py  evaluator.py  models.py  runner.py  suggester.py  updater.py
genie_world/builder/: __init__.py  assembler.py  benchmarks.py  data_sources.py  deployer.py  example_sqls.py  instructions.py  join_specs.py  snippets.py  sql_validator.py
genie_world/core/: __init__.py  auth.py  config.py  genie_client.py  llm.py  models.py  sql.py  storage.py  tracing.py
genie_world/profiler/: __init__.py  data_profiler.py  description_enricher.py  metadata_profiler.py  models.py  relationship_detector.py  synonym_generator.py  usage_profiler.py
notebooks/: genie_world_demo.py  genie_world_tracing_demo.py
tests/unit/benchmarks/: test_diagnoser.py  test_evaluator.py  test_models.py  test_public_api.py  test_runner.py  test_suggester.py  test_updater.py
tests/unit/builder/: test_assembler.py  test_benchmarks.py  test_data_sources.py  test_deployer.py  test_example_sqls.py  test_instructions.py  test_join_specs.py  test_models.py  test_snippets.py  (+2 more)
website/: docusaurus.config.js  package-lock.json  sidebars.js
(+27 files in other folders)
