[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genie-world"
version = "0.1.0"
description = "Modular building blocks for optimizing Databricks Genie Spaces"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.38.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
profiler = [
    "httpx>=0.25.0",
]
llm = []
tracing = [
    "mlflow>=2.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
]
all = [
    "genie-world[profiler,llm,tracing,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
